[feat]: Added contact model, controller, and routes
